Work on header overlap issues

--- a/ukbg/theme/static/bootstrap-3.3.5/less/siguv.less
+++ b/ukbg/theme/static/bootstrap-3.3.5/less/siguv.less
@@ -453,7 +453,7 @@ ul#portal-personaltools {
   .dropdown-menu {
     margin: 0 0 0 -1px;
   }
-  @media (max-width: 768px) {
+  @media (max-width: 979px) {
     // top: -5px;
     top: -40px;
     // left:86% !important;
